@@ -69,6 +69,9 @@ Bug Fixes
 * SOLR-5861: Recovery should not set onlyIfLeaderActive=true for slice in 'recovery'
   state. (shalin)
 
+* SOLR-5423: CSV output doesn't include function field
+  (Arun Kumar, hossman, Steve Rowe)
+
 ==================  4.7.0 ==================
 
 Versions of Major Components
